--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ nav{
 }
 .hero-content{
     /* width: 400px; */
-    background-color: black;
+    background-color: rgb(0, 0, 0);
     opacity: 0.5;
     color: white;
     /* background-color: rgba(255, 255, 255,0.6); */
