--- a/style.css
+++ b/style.css
@@ -22,3 +22,26 @@ nav{
     color: white;
     /* background-color: rgba(255, 255, 255,0.6); */
 }
+.pizza-order h2::after{
+    height: 30px;
+    width: 20px;
+    position: absolute;
+    background-color: blue;
+    
+   
+}
+.pizza-order h2{
+    border:  3px solid navy;
+
+}
+footer{
+    background-color: blue;
+}
+.lower-section{
+    background-color: rgb(230, 129, 129);
+    height: 90vh;
+    width: 100%;
+    background-repeat: no-repeat;
+    background-size: cover;
+    text-align: center;
+}
