--- a/style.css
+++ b/style.css
@@ -2,13 +2,15 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    scroll-behavior: smooth;
+    scroll-padding-top: 60px;
 }
 nav{
-    background-color: blue;
+    /* background-color: blue; */
 }
 
 .hero{
-    background: url(./images/pizzahome.jpg);
+    background: url(../images/hero123.jpg);
     height: 90vh;
     width: 100%;
     background-repeat: no-repeat;
@@ -17,8 +19,8 @@ nav{
 }
 .hero-content{
     /* width: 400px; */
-    background-color: rgb(0, 0, 0);
-    opacity: 0.5;
+    /* background-color: black;
+    opacity: 0.4; */
     color: white;
     /* background-color: rgba(255, 255, 255,0.6); */
 }
@@ -35,13 +37,15 @@ nav{
 
 }
 footer{
-    background-color: rgb(0, 255, 55);
+    background-color: rgb(8, 8, 153);
 }
 .lower-section{
-    background-color: rgb(17, 14, 199);
-    height: 90vh;
+    background-color: rgb(230, 129, 129);
     width: 100%;
     background-repeat: no-repeat;
     background-size: cover;
-    text-align: center;
+}
+
+.min-h{
+    min-height: 100vh;
 }
