--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ nav{
 }
 
 .hero{
-    background: url(../images/hero123.jpg);
+    background: url(./images/pizzahome.jpg);
     height: 90vh;
     width: 100%;
     background-repeat: no-repeat;
